feat: introduce metadata file for backup versioning
