# src/central-server/admin-service/core-api/src/main/java/org/niis/xroad/cs/admin/api/dto/BackupFile.java
@@ -36,5 +36,5 @@ import java.time.OffsetDateTime;
 public class BackupFile {
     String filename;
     OffsetDateTime createdAt;
-    Boolean backupCompatible;
+    boolean compatible;
 }
