# src/central-server/admin-service/core/src/main/java/org/niis/xroad/cs/admin/core/config/BackupMetadataProperties.java
@@ -1,20 +1,21 @@
 /*
  * The MIT License
+ *
  * Copyright (c) 2019- Nordic Institute for Interoperability Solutions (NIIS)
  * Copyright (c) 2018 Estonian Information System Authority (RIA),
  * Nordic Institute for Interoperability Solutions (NIIS), Population Register Centre (VRK)
  * Copyright (c) 2015-2017 Estonian Information System Authority (RIA), Population Register Centre (VRK)
- * <p>
+ *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
  * in the Software without restriction, including without limitation the rights
  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  * copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
- * <p>
+ *
  * The above copyright notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
- * <p>
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -23,20 +24,28 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-package org.niis.xroad.cs.admin.rest.api.converter;
+package org.niis.xroad.cs.admin.core.config;
 
-import org.niis.xroad.cs.admin.api.converter.GenericUniDirectionalMapper;
-import org.niis.xroad.cs.admin.api.dto.BackupFile;
-import org.niis.xroad.cs.openapi.model.BackupDto;
-import org.springframework.stereotype.Component;
+import lombok.Getter;
+import lombok.Setter;
+import org.springframework.boot.context.properties.ConfigurationProperties;
+import org.springframework.context.annotation.Configuration;
 
-@Component
-public class BackupDtoConverter implements GenericUniDirectionalMapper<BackupFile, BackupDto> {
+@Configuration
+@Getter
+@Setter
+@ConfigurationProperties(prefix = "xroad.admin-service.backup-metadata")
+public class BackupMetadataProperties {
 
-    @Override
-    public BackupDto toTarget(BackupFile backupFile) {
-        return new BackupDto()
-                .filename(backupFile.getFilename())
-                .compatible(backupFile.isCompatible());
-    }
+    /**
+     * Path to the file containing the current backup format version, used to determine backup compatibility.
+     * '/usr/share/xroad/scripts/_backup_format_version' by default.
+     */
+    private String backupFormatVersionFilePath;
+
+    /**
+     * Path to the script that parses an uploaded backup's tar label and writes its ".metadata" file.
+     * '/usr/share/xroad/scripts/_create_backup_metadata.sh' by default.
+     */
+    private String createBackupMetadataPath;
 }
