# src/security-server/admin-service/application/src/main/java/org/niis/xroad/securityserver/restapi/converter/BackupConverter.java
@@ -42,7 +42,7 @@ import java.util.stream.Collectors;
 public class BackupConverter {
 
     public BackupDto convert(BackupInfo backupInfo) {
-        return new BackupDto(backupInfo.name(), backupInfo.createdAt().atOffset(ZoneOffset.UTC), backupInfo.backupCompatible());
+        return new BackupDto(backupInfo.name(), backupInfo.createdAt().atOffset(ZoneOffset.UTC), backupInfo.compatible());
     }
 
     public Set<BackupDto> convert(Collection<BackupInfo> backupDto) {
