# src/shared-ui/src/types/backups.ts
@@ -28,7 +28,7 @@
 export type BackupItem = {
   filename: string;
   local_conf_present?: boolean;
-  backup_compatible: boolean;
+  compatible?: boolean;
 };
 
 export interface BackupHandler {
